--- a/ngVioletMarketplace/src/app/components/register/register.component.html
+++ b/ngVioletMarketplace/src/app/components/register/register.component.html
@@ -1,7 +1,12 @@
 <!-- <div class="card" style="width: 65rem;"> -->
-   <div class="card-body">
+
+  <div class="card-body">
     <form class="m-2" >
-      <p class="hint-text">Fill in this form to create your account!</p>
+      <div class="imgcontainer">
+        <img src="https://i.imgur.com/w6krsAd.png" alt="Avatar" class="avatar">
+        <h3 style="color: black">Fill in this form to create your account!</h3>
+      </div>
+
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Username" required="required" [(ngModel)]="newUser.username" name="username"/>
       </div>
@@ -20,7 +25,7 @@
       <div class="form-group">
         <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms &amp; Conditions</a></label>
       </div>
-      <a class="btn btn-primary btn-block" (click)="register(newUser)" value="Sign up">Sign up</a>
+      <a class="btn btn-primary btn-block" (click)="register(newUser)" value="Sign up" style="color: white;">Sign up</a>
     </form>
 <br><br><br>
   </div>
