--- a/ngVioletMarketplace/src/app/components/register/register.component.html
+++ b/ngVioletMarketplace/src/app/components/register/register.component.html
@@ -25,7 +25,7 @@
       <div class="form-group">
         <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms &amp; Conditions</a></label>
       </div>
-      <a class="btn btn-primary btn-block" (click)="register(newUser)" value="Sign up" style="color: white;">Sign up</a>
+      <a class="btn btn-primary btn-block" (click)="register(newUser)" data-dismiss="modal" value="Sign up" style="color: white;">Sign up</a>
     </form>
 <br><br><br>
   </div>
