--- a/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
+++ b/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
@@ -149,6 +149,19 @@
     </div>
   </div>
 </div>
+
+<!-- ///////////////// JUNK THROWAWAY USER BUTTONS CAN TRASH THESE ONCE USED ROUTINGS ////////////////// -->
+
+
+<a type="submit" class="btn btn-primary">Create bid</a><br>
+<a type="submit" class="btn btn-primary">Create token</a><br>
+<a type="submit" class="btn btn-primary">Create transfer or something else maybe</a><br>
+
+
+
+
+
+
 <!-- ////////////////////////////NFT HISTORY// //////////////////////////////////// -->
 <div class=" card">
   <div class=" card-header"><h3 class=" title">NFT History</h3></div>
