data binding for user page, fixed some issues with pulling data from spring

--- a/ngVioletMarketplace/src/app/components/home/home.component.html
+++ b/ngVioletMarketplace/src/app/components/home/home.component.html
@@ -6,10 +6,10 @@
 </head>
 
 
-<a routerLink='' class="btn-lg btn-primary" style="color: white;" type="submit">will's  profile</a><br>
-<a class="btn-lg btn-primary" style="color: white;" type="submit">caleb's  profile</a><br>
-<a class="btn-lg btn-primary" style="color: white;" type="submit">brandon's  profile</a><br>
-<a class="btn-lg btn-primary" style="color: white;" type="submit">dave's  profile</a><br>
+<a routerLink='/user/will' class="btn-lg btn-primary" style="color: white;" type="submit">will's  profile</a><br>
+<a routerLink='/user/caleb' class="btn-lg btn-primary" style="color: white;" type="submit">caleb's  profile</a><br>
+<a routerLink='/user/brandon' class="btn-lg btn-primary" style="color: white;" type="submit">brandon's  profile</a><br>
+<a routerLink='/user/dave' class="btn-lg btn-primary" style="color: white;" type="submit">dave's  profile</a><br>
 
 <div class="row">
   <div class="column side">
