--- a/ngVioletMarketplace/src/app/components/token/token.component.html
+++ b/ngVioletMarketplace/src/app/components/token/token.component.html
@@ -8,7 +8,7 @@
         <div class="card h-100 shadow-sm" style="width: 25rem">
 
           <div class="card-header"><img class="imgsize"
-              src="https://live.staticflickr.com/65535/51633352877_8852dea13b_w.jpg"/>
+              src="{{selected.tokenLocation}}"/>
           </div>
           <div>
 
@@ -16,9 +16,11 @@
           </div>
           <div class="card-body">
             <h1>Token Id :</h1>
+            <h1>{{selected.id}}</h1>
             <h2>Token Name :</h2>
-            <h2>Offer Price: </h2>
-
+            <h2>{{selected.name}}</h2>
+            <h2>Current Price: </h2>
+           <h2>${{selected.price}}</h2>
 
             </div><br>
 
@@ -28,7 +30,7 @@
 
 
 
-          <div class="card-footer">
+          <div class="card-footer" *ngIf="loggedIn()">
             <div class="text-center my-4">
 
               <button class="btn btn-primary" style="border-radius: 12px" routerLink='/bid'>
@@ -39,10 +41,25 @@
                Buy
                 </button>
             </div>
+          </div>
+
+            <div class="card-footer" *ngIf="!loggedIn()">
+              <div class="text-center my-4">
+
+                <button class="btn btn-primary" (click)="openModal(login)" style="border-radius: 12px" >
+                Login
+                </button>
+
+                <button class="btn btn-primary" style="border-radius: 12px" (click)="openModal(register)">
+                 Register
+                  </button>
+              </div>
 
           </div>
-        </div>
+
 </div>
+
+
 <!-- //////////////////////////// -->
 <h1>TRANSACTIONS TABLE</h1>
 <table class="table table-bordered table-striped table-hover">
@@ -97,3 +114,12 @@
   </tr>
 </tbody>
 </table>
+
+
+<ng-template #login>
+  <app-login></app-login>
+</ng-template>
+
+<ng-template #register>
+  <app-register></app-register>
+</ng-template>
