--- a/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
+++ b/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
@@ -4,7 +4,7 @@
       <div class=" card">
         <h1>{{user.username}} </h1>
         <H1>{{user.biography}}</H1>
-        <div class=" card-header"(click)="editProfile=!editProfile"><h3 class=" title">Edit Profile</h3></div>
+        <div class=" card-header"(click)="editProfile=!editProfile"><h3 class=" title">Edit Profile  ⬇️</h3></div>
         <div class=" card-body">
           <form *ngIf="editProfile">
             <div class=" row">
@@ -406,42 +406,4 @@
 
   <!-- //////////////////////////// -->
 
-  <!-- <form *ngIf="!loggedIn()">
-    <div class="form-group">
-      <label for="name">New NFT's Name</label>
-      <input type="text" class="form-control" id="id" placeholder="name" name="name" [(ngModel)]="newToken.name">
-    </div>
-    <div class="form-group">
-      <label for="description">Description</label>
-      <input type="text" class="form-control" id="description" placeholder="Description" name="description" [(ngModel)]="newToken.description">
-    </div>
-    <div class="form-group">
-      <label for="rarity">Rarity</label>
-      <input type="text" class="form-control" id="rarity" placeholder="Rarity" name="rarity" [(ngModel)]="newToken.rarity">
-    </div>
-    <div class="form-group">
-      <label for="price">Price</label>
-      <input type="number" class="form-control" id="price" placeholder="0" name="price" [(ngModel)]="newToken.price">
-    </div>
-    <div class="form-group">
-      <label for="releaseDate">Releases On </label>
-      <input type="date" class="form-control" id="releaseDate" placeholder="" name="releaseDate" [(ngModel)]="newToken.releaseDate">
-    </div>
-    <div class="form-group">
-      <label for="tokenLocation">Image URL</label>
-      <input type="url" class="form-control" id="tokenLocation" placeholder="" name="tokenLocation" [(ngModel)]="newToken.tokenLocation">
-    </div>
 
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Example textarea</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-  </form>
-
-  <button type="submit" class="btn-success btn-md" (click)="addToken(newToken)">Create New NFT</button> -->
-
-
-
-<!-- </div>
-</div>
-</div> -->
