token/user page info displaying

--- a/ngVioletMarketplace/src/app/components/bid-nft/bid-nft.component.html
+++ b/ngVioletMarketplace/src/app/components/bid-nft/bid-nft.component.html
@@ -1,4 +1,4 @@
-<br>
+<!-- <br>
 <br>
 <div class="col">
   <div class="card h-100 shadow-sm" style="width: 25rem">
@@ -39,4 +39,4 @@
         </button></a>
       </div>
 
-    </div>
+    </div> -->
