--- a/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
+++ b/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
@@ -1,11 +1,10 @@
+
+
 <div class=" content">
   <div class=" row">
     <div class=" col-md-8">
       <div class=" card">
-        <h1>{{user.username}} </h1>
-        <H1>{{user.biography}}</H1>
-        <div class=" card-header"(click)="editProfile=!editProfile"><h3 class=" title">Edit Profile  ⬇️</h3></div>
-        <div class=" card-body">
+        <div class=" card-body"><h5 style="color:white; font-size: 25px">{{user.displayName}}'s Profile</h5>
           <form *ngIf="editProfile">
             <div class=" row">
               <div class=" col-md-5 pr-md-1">
@@ -15,6 +14,7 @@
                     class=" form-control"
                     type="text"
                     value="{{user.email}}"
+                    [(ngModel)]="updatedUser.email"
                   />
                 </div>
               </div>
@@ -24,7 +24,8 @@
                   <input
                     class=" form-control"
                     type="text"
-                    value="{{user.username}}"
+                    [(ngModel)]="updatedUser.username"
+                    placeholder={{user.username}}
                   />
                 </div>
               </div>
@@ -87,7 +88,7 @@
           </form>
         </div>
         <div class=" card-footer">
-          <button class=" btn btn-fill btn-primary" type="submit">Save and Update</button>
+          <button class=" btn btn-fill btn-primary" *ngIf="editProfile" type="submit">Save and Update</button>
         </div>
       </div>
     </div>
@@ -109,15 +110,14 @@
                 src="https://bit.ly/3GSu5vh"
               />
 
-              <h5 class=" title">Username: {{user.username}}</h5>
-              <h5 class=" title">Display Name: {{user.displayName}}</h5>
-              <h5 class=" title">Email: {{user.email}}</h5>
-              <h5 class=" title">Role: {{user.role}}</h5>
-              <h5 class=" title">Wallet Balance: {{user.wallet}}</h5>
-              <h5 class=" title">This will be a link to click on for tx</h5>
+              <h5 class=" title" >Username: {{user.username}}</h5>
+              <h5 class=" title" [(ngModel)]="user.displayName">Display Name: {{user.displayName}}</h5>
+              <h5 class=" title" [(ngModel)]="user.email">Email: {{user.email}}</h5>
+              <h5 class=" title" [(ngModel)]="user.role">Role: {{user.role}}</h5>
+              <h5 class=" title" [(ngModel)]="user.wallet">Wallet Balance: {{user.wallet}}</h5>
 
             </a>
-            <p class=" description">{{user.biography}}</p>
+            <p class=" description" [(ngModel)]="user.biography"></p>
           </div>
           <!-- <div class=" card-description">
             {{user.biography}}
