--- a/ngVioletMarketplace/src/app/components/pictureupload/pictureupload.component.html
+++ b/ngVioletMarketplace/src/app/components/pictureupload/pictureupload.component.html
@@ -1,23 +1,35 @@
 <form>
   <div class="form-group">
-    <label for="exampleUsername">Username</label>
-    <input type="text" class="form-control" id="exampleUsername" aria-describedby="emailHelp" placeholder="Username">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <label for="name">New NFT's Name</label>
+    <input type="text" class="form-control" id="id" placeholder="name" name="name" >
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="loginUser.password">
+    <label for="description">Description</label>
+    <input type="text" class="form-control" id="description" placeholder="Description" name="description" >
   </div>
-  <div class="form-check">
-      <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="">
-          Option one is this
-          <span class="form-check-sign">
-              <span class="check"></span>
-          </span>
-      </label>
+  <div class="form-group">
+    <label for="rarity">Rarity</label>
+    <input type="text" class="form-control" id="rarity" placeholder="Rarity" name="rarity" >
+  </div>
+  <div class="form-group">
+    <label for="price">Price</label>
+    <input type="number" class="form-control" id="price" placeholder="0" name="price" >
+  </div>
+  <div class="form-group">
+    <label for="releaseDate">Releases On </label>
+    <input type="date" class="form-control" id="releaseDate" placeholder="" name="releaseDate" >
+  </div>
+  <div class="form-group">
+    <label for="tokenLocation">Image URL</label>
+    <input type="url" class="form-control" id="tokenLocation" placeholder="" name="tokenLocation" >
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+
+  <button type="submit" class="btn-primary btn-md" >Create New NFT</button>
 </form>
+
+
