--- a/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
+++ b/ngVioletMarketplace/src/app/components/user-page/user-page.component.html
@@ -4,7 +4,10 @@
   <div class=" row">
     <div class=" col-md-8">
       <div class=" card">
-        <div class=" card-body"><h5 style="color:white; font-size: 25px">{{user.displayName}}'s Profile</h5>
+        <h1>{{user.username}}'s Profile </h1>
+        <!-- <H1>{{user.biography}}</H1> -->
+        <div class=" card-header"(click)="editProfile=!editProfile"><h3 class=" title">Edit Profile  ⬇️</h3></div>
+        <div class=" card-body">
           <form *ngIf="editProfile">
             <div class=" row">
               <div class=" col-md-5 pr-md-1">
@@ -14,7 +17,6 @@
                     class=" form-control"
                     type="text"
                     value="{{user.email}}"
-                    [(ngModel)]="updatedUser.email"
                   />
                 </div>
               </div>
@@ -24,8 +26,7 @@
                   <input
                     class=" form-control"
                     type="text"
-                    [(ngModel)]="updatedUser.username"
-                    placeholder={{user.username}}
+                    value="{{user.username}}"
                   />
                 </div>
               </div>
@@ -88,10 +89,11 @@
           </form>
         </div>
         <div class=" card-footer">
-          <button class=" btn btn-fill btn-primary" *ngIf="editProfile" type="submit">Save and Update</button>
+          <button class=" btn btn-fill btn-primary" type="submit">Save and Update</button>
         </div>
       </div>
     </div>
+
 
   <!-- /////////////////////////////PROFILE CARD///////////////////////////////////// -->
     <div class=" col-md-4">
@@ -115,6 +117,13 @@
               <h5 class=" title" [(ngModel)]="user.email">Email: {{user.email}}</h5>
               <h5 class=" title" [(ngModel)]="user.role">Role: {{user.role}}</h5>
               <h5 class=" title" [(ngModel)]="user.wallet">Wallet Balance: {{user.wallet}}</h5>
+
+              <button type="button" class="nav-link btn btn-primary" (click)="openModal(createNFT)" style="color: white; justify-content: center; " >Create NFT</button>
+
+
+              <ng-template #createNFT>
+                <app-pictureupload></app-pictureupload>
+              </ng-template>
 
             </a>
             <p class=" description" [(ngModel)]="user.biography"></p>
@@ -153,9 +162,9 @@
 <!-- ///////////////// JUNK THROWAWAY USER BUTTONS CAN TRASH THESE ONCE USED ROUTINGS ////////////////// -->
 
 
-<a type="submit" class="btn btn-primary">Create bid</a><br>
-<a type="submit" class="btn btn-primary">Create token</a><br>
-<a type="submit" class="btn btn-primary">Create transfer or something else maybe</a><br>
+
+
+
 
 
 
@@ -405,5 +414,8 @@
     </div>
 
   <!-- //////////////////////////// -->
+
+
+
 
 
