--- a/ngVioletMarketplace/src/app/components/pictureupload/pictureupload.component.html
+++ b/ngVioletMarketplace/src/app/components/pictureupload/pictureupload.component.html
@@ -29,7 +29,7 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
 
-  <button type="submit" class="btn-primary btn-md" >Create New NFT</button>
+  <button type="submit" class="btn-primary btn-md col-xs-1" align="center" >Create New NFT</button>
 </form>
 
 
