--- a/ngVioletMarketplace/src/app/components/user-page/user-page.component.css
+++ b/ngVioletMarketplace/src/app/components/user-page/user-page.component.css
@@ -20,3 +20,14 @@ body, html {
 input, textarea {
   background-color: black;
 }
+
+
+
+.nft {
+  margin: 0;
+  position: absolute;
+
+  left: 50%;
+  -ms-transform: translate(50%, -50%);
+  transform: translate(-50%, -50%);
+}
